# Agora

./: .gitattributes  .gitignore  README.md  biome.json  package.json  ty.toml
.github/workflows/: ci.yml
apps/arena/: package.json  vite.config.ts
apps/arena/src/: App.tsx  index.css
apps/arena/src/components/: CombatParallaxBackground.tsx  CombatScreen.tsx  DialogueBox.tsx  FighterSprite.tsx  ModeToggle.tsx  ParallaxBackground.tsx  SetupParallaxBackground.tsx  SetupScreen.tsx  SpriteTransitionBridge.tsx  VersusBanner.tsx
apps/arena/src/hooks/: useEngineStream.ts  useTypewriter.ts  useViewportHeight.ts
apps/arena/src/lib/: api.ts  roster.ts  spritePositioning.ts
apps/arena/src/types/: fighter.ts
apps/core/: config.py  debate.py  judge.py  personas.py  prompt_engine.py
apps/engine/: .gitignore  Dockerfile  main.py  pyproject.toml
apps/engine/api/: __init__.py  health.py  routes.py  stream.py
apps/engine/app/: __init__.py  main.py
apps/engine/app/api/: __init__.py  matchmaker.py  stream.py
apps/engine/app/domain/: __init__.py  director.py  judge.py  roster.py  schemas.py
apps/engine/app/infra/: __init__.py  events.py  llm_client.py  openai_client.py
apps/engine/domain/: __init__.py  director.py  judge.py  personas.py  prompt_builder.py  schemas.py
apps/engine/infra/: __init__.py  events.py  llm_client.py
apps/llm/: client.py
apps/web/: package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: Navbar.tsx  RosterSection.tsx  WakeUpPing.tsx
apps/web/src/lib/: engineUrl.ts
(+1 files in other folders)
