[project]
name = "agora-engine"
version = "0.1.0"
description = "Deterministic structured debate engine for Agora"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[tool.uv]
package = false
